Enhance HTML structure and content for Youssou N'Dour, About Us, and Soukous pages with improved readability and additional sections

--- a/artists/angelique-kidjo.html
+++ b/artists/angelique-kidjo.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Angélique Kidjo</title>
 </head>
+
 <body>
     <header>
         <h1>Angélique Kidjo</h1>
     </header>
     <main class="container">
-        <img src="https://imgs.search.brave.com/vNDFAqFWUsCgOxIf_SgIzt4fwyKtoKN1kXFaZ0RhVlY/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS5nZXR0eWltYWdl/cy5jb20vaWQvMTk2/ODc1MTU1Ni9waG90/by9sb25kb24tZW5n/bGFuZC1hbmdlbGlx/dWUta2lkam8tcGVy/Zm9ybXMtYXQtdGhl/LW8yLWFyZW5hLW9u/LWphbnVhcnktMjgt/MjAyNC1pbi1sb25k/b24tZW5nbGFuZC5q/cGc_cz02MTJ4NjEy/Jnc9MCZrPTIwJmM9/VjJEZzZpLW1mWFBs/QzRhMlJ0eFY1dThY/X3NXZFlhU0YydHFo/N3NRYU1rVT0" alt="Angélique Kidjo performing" class="artist-image">
-        
+        <img src="https://imgs.search.brave.com/vNDFAqFWUsCgOxIf_SgIzt4fwyKtoKN1kXFaZ0RhVlY/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS5nZXR0eWltYWdl/cy5jb20vaWQvMTk2/ODc1MTU1Ni9waG90/by9sb25kb24tZW5n/bGFuZC1hbmdlbGlx/dWUta2lkam8tcGVy/Zm9ybXMtYXQtdGhl/LW8yLWFyZW5hLW9u/LWphbnVhcnktMjgt/MjAyNC1pbi1sb25k/b24tZW5nbGFuZC5q/cGc_cz02MTJ4NjEy/Jnc9MCZrPTIwJmM9/VjJEZzZpLW1mWFBs/QzRhMlJ0eFY1dThY/X3NXZFlhU0YydHFo/N3NRYU1rVT0"
+            alt="Angélique Kidjo performing" class="artist-image">
+
         <section class="biography">
             <details>
                 <summary>Biography</summary>
-                <p>Angélique Kidjo is a Beninese singer, songwriter, actress, and activist, celebrated as one of Africa's most iconic and influential artists. Known for her unique blend of African music with elements of jazz, funk, and world music, she has won multiple Grammy Awards and is a strong advocate for education and humanitarian causes.</p>
+                <p>Angélique Kidjo is a Beninese singer, songwriter, actress, and activist, celebrated as one of
+                    Africa's most iconic and influential artists. Known for her unique blend of African music with
+                    elements of jazz, funk, and world music, she has won multiple Grammy Awards and is a strong advocate
+                    for education and humanitarian causes.</p>
             </details>
         </section>
 
@@ -29,7 +35,10 @@
 
         <section class="videos">
             <h2>Watch Angélique Kidjo</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/-8LiSJN9ISw?si=m5F3BXgYg3pqYzbZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/-8LiSJN9ISw?si=m5F3BXgYg3pqYzbZ"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
 
         <section class="discography">
@@ -58,17 +67,14 @@
 
         <section class="map">
             <h2>Origin Country: Benin</h2>
-            <iframe 
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d789000.123456789!2d1.283330!3d9.323841!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zOS4zMjM4NCAxLjI4MzMgRQ!5e0!3m2!1sen!2sbn!4v1616161616161" 
-                width="600" 
-                height="450" 
-                style="border:0;" 
-                allowfullscreen="" 
-                loading="lazy"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d789000.123456789!2d1.283330!3d9.323841!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zOS4zMjM4NCAxLjI4MzMgRQ!5e0!3m2!1sen!2sbn!4v1616161616161"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </section>
     </main>
     <footer>
         <p>&copy; 2024 African Music Heritage. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
