--- a/artists/youssou-ndour.html
+++ b/artists/youssou-ndour.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youssou N'Dour</title>
-   
 </head>
+
 <body>
+    <!-- Header Section -->
     <header>
         <h1>Youssou N'Dour</h1>
     </header>
+
+    <!-- Main Content Container -->
     <main class="container">
-        <img src="https://imgs.search.brave.com/lxlPcyHiaF19YtKHqgIoTOi8KWBcgjhiZOGIwLkQro8/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pLmd1/aW0uY28udWsvaW1n/L3N0YXRpYy9zeXMt/aW1hZ2VzL09ic2Vy/dmVyL0NvbHVtbmlz/dC9Db2x1bW5pc3Rz/LzIwMTIvMS82LzEz/MjU4ODMyOTU1NjEv/WW91c3NvdS1ORG91/ci0wMDUuanBnP3dp/ZHRoPTI0MCZkcHI9/MSZzPW5vbmUmY3Jv/cD1ub25l" alt="Youssou N'Dour performing" class="artist-image">
-        
+
+        <!-- Artist Image Section -->
+        <section class="artist-image">
+            <img src="https://imgs.search.brave.com/lxlPcyHiaF19YtKHqgIoTOi8KWBcgjhiZOGIwLkQro8/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pLmd1/aW0uY28udWsvaW1n/L3N0YXRpYy9zeXMt/aW1hZ2VzL09ic2Vy/dmVyL0NvbHVtbmlz/dC9Db2x1bW5pc3Rz/LzIwMTIvMS82LzEz/MjU4ODMyOTU1NjEv/WW91c3NvdS1ORG91/ci0wMDUuanBnP3dp/ZHRoPTI0MCZkcHI9/MSZzPW5vbmUmY3Jv/cD1ub25l" alt="Youssou N'Dour performing" class="artist-image">
+        </section>
+
+        <!-- Biography Section -->
         <section class="biography">
             <details>
                 <summary>Biography</summary>
@@ -20,6 +29,7 @@
             </details>
         </section>
 
+        <!-- Music Section -->
         <section class="music">
             <h2>Listen to Youssou N'Dour</h2>
             <audio controls>
@@ -28,11 +38,13 @@
             </audio>
         </section>
 
+        <!-- Videos Section -->
         <section class="videos">
             <h2>Watch Youssou N'Dour</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/QA9EET0_4is?si=eQ_TANMU-4xMUCd1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
 
+        <!-- Discography Section -->
         <section class="discography">
             <h2>Discography</h2>
             <ul>
@@ -47,6 +59,7 @@
             </ul>
         </section>
 
+        <!-- Social Media Section -->
         <section class="social-media">
             <h2>Follow Youssou N'Dour</h2>
             <ul>
@@ -56,6 +69,7 @@
             </ul>
         </section>
 
+        <!-- Map Section -->
         <section class="map">
             <h2>Origin Country: Senegal</h2>
             <iframe 
@@ -64,11 +78,16 @@
                 height="450" 
                 style="border:0;" 
                 allowfullscreen="" 
-                loading="lazy"></iframe>
+                loading="lazy">
+            </iframe>
         </section>
     </main>
+
+    <!-- Footer Section -->
     <footer>
         <p>&copy; 2024 African Music Heritage. All rights reserved.</p>
     </footer>
+
 </body>
+
 </html>
