--- a/about.html
+++ b/about.html
@@ -1,35 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - African Music Heritage</title>
 </head>
+
 <body>
+    <!-- Header Section -->
     <header>
         <h1>About Us</h1>
     </header>
+
+    <!-- Main Content Container -->
     <main class="container">
+
+        <!-- Mission Section -->
         <section class="mission">
             <h2>Our Mission</h2>
             <p>
-                At <strong>African Music Heritage</strong>, our mission is to promote the rich diversity and cultural significance of African music. 
-                We aim to showcase traditional and modern African music genres, connect fans with artists, and provide a platform for discovery, education, and celebration of Africa's vibrant musical heritage.
+                At <strong>African Music Heritage</strong>, our mission is to promote the rich diversity and cultural
+                significance of African music. We aim to showcase traditional and modern African music genres, connect
+                fans with artists, and provide a platform for discovery, education, and celebration of Africa's vibrant
+                musical heritage.
             </p>
         </section>
 
+        <!-- Contact Form Section -->
         <section class="contact-form">
             <h2>Contact Us</h2>
+            <!-- Form to collect user information -->
             <form action="/submit-contact" method="post">
+                <!-- Input for name -->
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
 
+                <!-- Input for email -->
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
 
+                <!-- Text area for message -->
                 <label for="message">Message:</label>
                 <textarea id="message" name="message" rows="5" required></textarea>
 
+                <!-- Datalist for country selection -->
                 <label for="country">Country:</label>
                 <input list="countries" id="country" name="country" required>
                 <datalist id="countries">
@@ -42,12 +57,15 @@
                     <option value="Uganda">
                 </datalist>
 
+                <!-- Submit button -->
                 <button type="submit">Submit</button>
             </form>
         </section>
 
+        <!-- Location Section -->
         <section class="location">
             <h2>Our Location</h2>
+            <!-- Google Maps embed for the location -->
             <iframe 
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.8354345094074!2d144.9630577153188!3d-37.8162799797519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d43f1e0f3f7%3A0x2a02f0b8d1799e8f!2sFederation%20Square!5e0!3m2!1sen!2sau!4v1612324358478!5m2!1sen!2sau" 
                 allowfullscreen 
@@ -55,13 +73,18 @@
             </iframe>
         </section>
     </main>
+
+    <!-- Footer Section -->
     <footer>
+        <!-- Newsletter subscription form -->
         <form action="/subscribe-newsletter" method="post">
             <label for="newsletter">Subscribe to Our Newsletter:</label>
             <input type="email" id="newsletter" name="email" placeholder="Enter your email" required>
             <button type="submit">Subscribe</button>
         </form>
+        <!-- Footer text -->
         <p>&copy; 2024 African Music Heritage. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
