--- a/index.html
+++ b/index.html
@@ -1,18 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Discover African Music</title>
-    <!-- Meta information to define character set and viewport settings -->
+    <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="style.css">
+    <!-- Link to Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Agu+Display&display=swap" rel="stylesheet">
 </head>
-
 <body>
     <!-- HEADER: Contains the main title of the site -->
     <header>
         <h1>Discover African Music</h1>
     </header>
+
+    <!-- NAVIGATION MENU -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="genres/afrobeats.html">Afrobeats</a></li>
+            <li><a href="genres/soukous.html">Soukous</a></li>
+            <li><a href="genres/highlife.html">Highlife</a></li>
+            <li><a href="about.html">About Us</a></li>
+        </ul>
+    </nav>
 
     <!-- MAIN CONTENT AREA -->
     <main>
@@ -27,7 +44,6 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                 referrerpolicy="strict-origin-when-cross-origin" 
                 allowfullscreen></iframe>
-            <!-- Embedded YouTube video showcasing African music -->
         </section>
 
         <!-- FEATURED ARTISTS SECTION -->
@@ -89,10 +105,9 @@
         </section>
     </main>
 
-    <!-- FOOTER SECTION -->
+    <!-- FOOTER: Contains copyright information -->
     <footer>
         <p>&copy; 2024 African Music Heritage. All rights reserved.</p>
     </footer>
 </body>
-
 </html>
